--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
       for Your Business"
     />
     <title>Effective Solutions for Your Business</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Roboto:wght@400;500;700;&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"><span slass="accent">Web</span>Studio</a>
         <ul>
           <li><a href="#studio">Studio</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -31,44 +47,44 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="title">
+        <h1 class="title-text">Effective Solutions for Your Business</h1>
+        <button type="button" class="title-button">Order Service</button>
       </section>
-      <section>
+      <section class="info">
         <h2 id="studio">Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
-            <p>
+            <p class="main-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
-            <p>
+            <p class="main-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
-            <p>
+            <p class="main-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3>Technologies</h3>
-            <p>
+            <p class="main-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2 id="portfolio">Our Team</h2>
         <ul>
           <li>
@@ -79,7 +95,7 @@
               height="260"
             />
             <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="main-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -89,7 +105,7 @@
               height="260"
             />
             <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="main-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -99,7 +115,7 @@
               height="260"
             />
             <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="main-text">Marketing</p>
           </li>
           <li>
             <img
@@ -109,14 +125,49 @@
               height="260"
             />
             <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="main-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="portfolio">
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/img-10.jpg" alt="app" width="360" height="300" />
+            <h3>Banking App</h3>
+            <p class="main-text">App</p>
+          </li>
+          <li>
+            <img src="./images/img-9.jpg" alt="app" width="360" height="300" />
+            <h3>Cashless Payment</h3>
+            <p class="main-text">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img8.jpg" alt="app" width="360" height="300" />
+            <h3>Meditation App</h3>
+            <p class="main-text">App</p>
+          </li>
+          <li>
+            <img src="./images/img-7.jpg" alt="app" width="360" height="300" />
+            <h3>Taxi Service</h3>
+            <p class="main-text">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img-6.jpg" alt="app" width="360" height="300" />
+            <h3>Screen Illustrations</h3>
+            <p class="main-text">Design</p>
+          </li>
+          <li>
+            <img src="./images/img5.jpg" alt="app" width="360" height="300" />
+            <h3>Online Courses</h3>
+            <p class="main-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html"><span slass="accent">Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
