--- a/index.html
+++ b/index.html
@@ -28,20 +28,26 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span slass="accent">Web</span>Studio</a>
+        <a href="./index.html" class="logo-header"
+          ><span class="accent">Web</span>Studio</a
+        >
         <ul>
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="#studio" class="link">Studio</a></li>
+          <li><a href="#portfolio" class="link">Portfolio</a></li>
+          <li><a href="#contacts" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link-address"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link-address"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -166,7 +172,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html"><span slass="accent">Web</span>Studio</a>
+      <a href="./index.html" class="logo-footer"
+        ><span class="accent">Web</span>Studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
