--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo-header"
-          ><span class="accent">Web</span>Studio</a
+        <a href="./index.html" class="logo"
+          >Web<span class="accent-header">Studio</span></a
         >
         <ul>
-          <li><a href="#studio" class="link">Studio</a></li>
-          <li><a href="#portfolio" class="link">Portfolio</a></li>
-          <li><a href="#contacts" class="link">Contacts</a></li>
+          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="link-address"
@@ -61,28 +61,28 @@
         <h2 id="studio">Advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="main-h">Strategy</h3>
             <p class="main-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="main-h">Punctuality</h3>
             <p class="main-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="main-h">Diligence</h3>
             <p class="main-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="main-h">Technologies</h3>
             <p class="main-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -100,7 +100,7 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="main-h">Mark Guerrero</h3>
             <p class="main-text">Product Designer</p>
           </li>
           <li>
@@ -110,7 +110,7 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="main-h">Tom Ford</h3>
             <p class="main-text">Frontend Developer</p>
           </li>
           <li>
@@ -120,7 +120,7 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="main-h">Camila Garcia</h3>
             <p class="main-text">Marketing</p>
           </li>
           <li>
@@ -130,7 +130,7 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="main-h">Daniel Wilson</h3>
             <p class="main-text">UI Designer</p>
           </li>
         </ul>
@@ -140,40 +140,40 @@
         <ul>
           <li>
             <img src="./images/img-10.jpg" alt="app" width="360" height="300" />
-            <h3>Banking App</h3>
+            <h3 class="main-h">Banking App</h3>
             <p class="main-text">App</p>
           </li>
           <li>
             <img src="./images/img-9.jpg" alt="app" width="360" height="300" />
-            <h3>Cashless Payment</h3>
+            <h3 class="main-h">Cashless Payment</h3>
             <p class="main-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img8.jpg" alt="app" width="360" height="300" />
-            <h3>Meditation App</h3>
+            <h3 class="main-h">Meditation App</h3>
             <p class="main-text">App</p>
           </li>
           <li>
             <img src="./images/img-7.jpg" alt="app" width="360" height="300" />
-            <h3>Taxi Service</h3>
+            <h3 class="main-h">Taxi Service</h3>
             <p class="main-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img-6.jpg" alt="app" width="360" height="300" />
-            <h3>Screen Illustrations</h3>
+            <h3 class="main-h">Screen Illustrations</h3>
             <p class="main-text">Design</p>
           </li>
           <li>
             <img src="./images/img5.jpg" alt="app" width="360" height="300" />
-            <h3>Online Courses</h3>
+            <h3 class="main-h">Online Courses</h3>
             <p class="main-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-footer"
-        ><span class="accent">Web</span>Studio</a
+      <a href="./index.html" class="logo"
+        >Web<span class="accent-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
