--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button type="button" class="title-button">Order Service</button>
       </section>
       <section class="info">
-        <h2 id="studio">Advantages</h2>
+        <h2 id="studio" class="main-he">Advantages</h2>
         <ul>
           <li>
             <h3 class="main-h">Strategy</h3>
@@ -91,7 +91,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2 id="portfolio">Our Team</h2>
+        <h2 id="portfolio" class="main-he">Our Team</h2>
         <ul>
           <li>
             <img
@@ -136,7 +136,7 @@
         </ul>
       </section>
       <section class="portfolio">
-        <h2>Our Portfolio</h2>
+        <h2 class="main-he">Our Portfolio</h2>
         <ul>
           <li>
             <img src="./images/img-10.jpg" alt="app" width="360" height="300" />
