--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
               alt="photo Mark"
               width="264"
               height="260"
+              class="team-photo"
             />
             <h3 class="main-h">Mark Guerrero</h3>
             <p class="main-text">Product Designer</p>
@@ -109,6 +110,7 @@
               alt="photo Tom"
               width="264"
               height="260"
+              class="team-photo"
             />
             <h3 class="main-h">Tom Ford</h3>
             <p class="main-text">Frontend Developer</p>
@@ -119,6 +121,7 @@
               alt="photo Camila"
               width="264"
               height="260"
+              class="team-photo"
             />
             <h3 class="main-h">Camila Garcia</h3>
             <p class="main-text">Marketing</p>
@@ -129,6 +132,7 @@
               alt="photo Daniel"
               width="264"
               height="260"
+              class="team-photo"
             />
             <h3 class="main-h">Daniel Wilson</h3>
             <p class="main-text">UI Designer</p>
