fix html third section

--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
       <section class="team">
         <h2 id="portfolio" class="main-he">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-photo">
             <img
-              class="team-photo"
               src="./images/img-3.jpg"
               alt="photo Mark"
               width="264"
@@ -104,9 +103,8 @@
             <h3 class="main-h">Mark Guerrero</h3>
             <p class="main-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-photo">
             <img
-              class="team-photo"
               src="./images/img-2.jpg"
               alt="photo Tom"
               width="264"
@@ -115,9 +113,8 @@
             <h3 class="main-h">Tom Ford</h3>
             <p class="main-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-photo">
             <img
-              class="team-photo"
               src="./images/img-1.jpg"
               alt="photo Camila"
               width="264"
@@ -126,9 +123,8 @@
             <h3 class="main-h">Camila Garcia</h3>
             <p class="main-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-photo">
             <img
-              class="team-photo"
               src="./images/img.jpg"
               alt="photo Daniel"
               width="264"
